project/kubernetes/deployment-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-worker-deployment
  namespace: default
spec:
  selector:
    matchLabels:
      name: spring-worker
  replicas: 2 # tells deployment to run 2 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      # unlike pod.yaml, the name is not included in the meta data as a unique name is
      # generated from the deployment name
      labels:
        name: spring-worker
    spec:
      containers:
      - name: spring-worker
        image: whuang0/starbucks-worker
        ports:
        - containerPort: 7676
