project/kubernetes/service-cashier.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-cashier-service
  namespace: default
spec:
  type: NodePort
  ports:
  - port: 9050
    targetPort: 9050
  selector:
    name: spring-cashier
