project/kubernetes/kong-ingress-rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: starbucks-api
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /api
        pathType: ImplementationSpecific
        backend:
          service:
            name: spring-starbucks-api-service
            port:
              number: 80
